--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Notes"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".Login"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".CreatePassword"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
